<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>all_launch</name>
  <version>0.0.0</version>
  <description>Launch files for Yahboom mobile robot with SLAM capabilities</description>
  <maintainer email="yoga.dana69@gmail.com">yoga</maintainer>
  <license>TODO: License declaration</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rviz_common</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>rclpy</exec_depend> <!-- if you use python launch files -->
  <exec_depend>rclcpp</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>opennav_docking</exec_depend>
  <exec_depend>opennav_docking_msgs</exec_depend>
  <exec_depend>yahboomcar_base_node</exec_depend>
  <exec_depend>bringup</exec_depend>
  <exec_depend>controller</exec_depend>
  <exec_depend>urg_node2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
